--- a/app/src/main/res/layout/fragment_contactslist.xml
+++ b/app/src/main/res/layout/fragment_contactslist.xml
@@ -4,43 +4,29 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".FileBrowserListFragment" >
-    
+
     <ImageView
-	    android:id="@+id/contact_list_empty_image"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_marginTop="25dp"
-	    android:layout_centerHorizontal="true" 
-	    android:gravity="center_horizontal"/>
-    
+        android:id="@+id/contact_list_empty_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:gravity="center_horizontal" />
+
     <TextView
-	    android:id="@+id/contact_list_empty_text"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:textColor="@color/text_secondary"
-	    android:textSize="16sp"
-	    android:layout_below="@id/contact_list_empty_image"
-	    android:layout_centerHorizontal="true"
-	    android:gravity="center_horizontal"/>
-    
-    <ListView
+        android:id="@+id/contact_list_empty_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/contact_list_empty_image"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:textColor="@color/text_secondary"
+        android:textSize="16sp" />
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/add_contact_button">
-    </ListView>
-    
-    
-	<Button
-       	android:id="@+id/add_contact_button"
-       	android:layout_gravity="center"
-       	android:layout_height="48dp"
-       	android:layout_width="fill_parent"
-       	android:layout_alignParentBottom="true"
-       	android:background="@drawable/btn_default_holo_light_without_corners"
-       	android:textColor="@color/white"
-       	android:text="@string/menu_add_contact" >
-    </Button>
-    
+        android:layout_height="match_parent"
+        android:choiceMode="multipleChoice" />
+
 </RelativeLayout>
