--- a/app/src/main/res/layout/activity_contactsexplorer.xml
+++ b/app/src/main/res/layout/activity_contactsexplorer.xml
@@ -1,71 +1,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_container_contacts_explorer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".FileStorageActivityLollipop" >
+    tools:context=".ContactsExplorerActivityLollipop" >
     
-    <RelativeLayout
-        android:id="@+id/contacts_explorer_toolbar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_contacts_explorer"
         android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:context=".ContactsExplorerActivityLollipop" />
+    
+    <ImageView
+        android:id="@+id/contact_explorer_list_empty_image"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_margin" >
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/ic_empty_contacts"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/toolbar_contacts_explorer" />
 
-        <LinearLayout
-            android:id="@+id/contacts_explorer_button_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal" >
-
-            <ImageButton
-                android:id="@+id/contacts_explorer_phone_mega_contacts"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_add_contact"
-                android:src="@drawable/ic_phone" />
-            
-            <ImageButton
-                android:id="@+id/contacts_explorer_add_contact"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_add_contact"
-                android:src="@drawable/ic_add_contact" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/contacts_explorer_window_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/contacts_explorer_button_bar"
-            android:ellipsize="start"
-            android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            />
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/contacts_explorer_divider_top"
-        android:layout_width="match_parent"
-        android:layout_height="2dip"
-        android:layout_below="@id/contacts_explorer_toolbar"
-        android:background="@color/mega" />
-
-    <Button
-        android:id="@+id/contacts_explorer_button"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/contact_explorer_list_empty_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center" />
-
-    <ListView
+        android:layout_below="@id/contact_explorer_list_empty_image"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:text="@string/contacts_explorer_list_empty_text"
+        android:textColor="@color/text_secondary"
+        android:textSize="16sp" />
+  
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_explorer_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/contacts_explorer_button"
-        android:layout_below="@id/contacts_explorer_divider_top" />
+        android:layout_below="@id/toolbar_contacts_explorer"/>
 
 </RelativeLayout>
