--- a/app/src/main/res/layout/contact_explorer_item.xml
+++ b/app/src/main/res/layout/contact_explorer_item.xml
@@ -1,51 +1,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/contact_list_item_layout" >
         
 
     <RelativeLayout
 		android:id="@+id/contact_explorer_relative_layout_avatar"
-		android:layout_width="54dp"
-		android:layout_height="54dp"
-		android:layout_marginLeft="5dp" 
-		android:paddingTop="3dp">
+		android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="18dp"
+        android:layout_centerVertical="true">
 		
 	    <mega.privacy.android.app.components.RoundedImageView 
 	         android:id="@+id/contact_explorer_thumbnail"
-	         android:layout_width="54dp"
-	         android:layout_height="54dp"
-	         android:scaleType="fitCenter"
-	         rounded:corner_radius="27dp" 
-	         rounded:border_width="0dp"
-	         rounded:border_color="@color/border_file_properties"/>
+	         android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitCenter"
+            android:layout_centerInParent="true"
+            rounded:border_color="@color/border_file_properties"
+            rounded:border_width="0dp"
+            rounded:corner_radius="20dp" />
     
     	<TextView
 	        android:id="@+id/contact_explorer_initial_letter"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:layout_centerInParent="true"
-		    android:gravity="center_horizontal|center_vertical" />
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+			android:layout_centerInParent="true"
+			android:gravity="center_horizontal|center_vertical"
+			android:paddingBottom="3dp" />
 	    
     </RelativeLayout>
     
     <TextView
         android:id="@+id/contact_explorer_name"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/contact_explorer_relative_layout_avatar"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp" />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row" 
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1"/>
     
     <TextView 
         android:id="@+id/contact_explorer_phone_mail"
-        android:layout_width="fill_parent"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/contact_explorer_relative_layout_avatar"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
+        android:layout_marginLeft="13dp"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/file_list_second_row"
         android:layout_below="@id/contact_explorer_name"/>
     
 </RelativeLayout>
