--- a/app/src/main/res/layout/item_contact_grid.xml
+++ b/app/src/main/res/layout/item_contact_grid.xml
@@ -1,15 +1,13 @@
-<RelativeLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:rounded="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/contact_grid_item_complete_layout"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/contact_grid_item_complete_layout"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:background="@color/new_background_fragment">
     
     <RelativeLayout 
         android:layout_width="172dp"
         android:layout_height="wrap_content"
-        android:id="@+id/contact_grid_item_layout1"
+        android:id="@+id/contact_grid_item_layout"
         android:background="@drawable/background_item_grid"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -18,268 +16,61 @@
         android:descendantFocusability="blocksDescendants" >
         
         <RelativeLayout
-			android:id="@+id/contact_grid_relative_layout_avatar1"
-			android:layout_width="157dp"
-		    android:layout_height="157dp"
-		    android:layout_centerHorizontal="true"
-		    android:paddingTop="5dp"
-		    android:paddingBottom="5dp"
-		    android:layout_marginLeft="5dp"
-		    android:layout_marginTop="5dp"
-		    android:layout_marginRight="5dp">
+			android:id="@+id/contact_grid_relative_layout_avatar"
+			android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+			android:background="@color/new_background_fragment">
 		
-		    <mega.privacy.android.app.components.RoundedImageView 
-			    android:id="@+id/contact_grid_thumbnail1"
-			    android:layout_width="157dp"
-			    android:layout_height="157dp"
-			    android:scaleType="fitCenter"
-		        rounded:corner_radius="27dp" 
-		        rounded:border_width="0dp"
-		        rounded:border_color="@color/border_file_properties"/>
+		    <ImageView 
+			    android:id="@+id/contact_grid_thumbnail"
+			    android:layout_width="172dp"
+			    android:layout_height="172dp"
+				android:layout_centerInParent="true"
+				android:gravity="center_horizontal|center_vertical"/>
 		    
 		    <TextView
-		        android:id="@+id/contact_grid_initial_letter1"
+		        android:id="@+id/contact_grid_initial_letter"
 		        android:layout_width="157dp"
 		        android:layout_height="140dp" 
 			    android:gravity="center_horizontal|center_vertical" />
 	    
 	    </RelativeLayout>
-                
-        <View
-	        android:id="@+id/contact_grid_separator1"
-	 		android:layout_width="wrap_content"
-	 		android:layout_height="2dp"
-	 		android:background="@color/grid_item_separator"
-	        android:scaleType="fitCenter"
-	        android:layout_marginLeft="6dp"
-	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/contact_grid_relative_layout_avatar1"
-	 		 />
-        
-        <TextView
-	        android:id="@+id/contact_grid_filename1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"	
-	        android:paddingLeft="6dp"
-	        android:paddingTop="3dp"
-	        android:layout_below="@id/contact_grid_separator1" />
-        
-        <TextView
-	        android:id="@+id/contact_grid_filesize1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
-	        android:paddingLeft="6dp"
-	        android:paddingBottom="7dp"
-	        android:textColor="@color/contact_list_second_row"
-	        android:layout_below="@id/contact_grid_filename1" />
-        
-        <ImageButton 
-	        android:id="@+id/contact_grid_three_dots1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/action_selector_ic"
-			android:background="@null" 
-			android:paddingTop="6dp"
-	        android:paddingLeft="2dp"
-	        android:paddingRight="10dp"
-	        android:paddingBottom="12dp"
-	        android:layout_gravity="right"
-	        android:layout_alignParentRight="true" 
-	        android:layout_alignParentBottom="true"/>
-         <!--
-        <ImageView
-	        android:id="@+id/contact_grid_arrow_selection1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/contact_grid_three_dots1"
-			android:layout_alignParentBottom="true"
-			android:layout_alignParentRight="true"
-			android:paddingRight="14dp" />-->
-               
-    </RelativeLayout>
-    
-    <RelativeLayout
-        android:id="@+id/contact_grid_options1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/contact_grid_item_layout1"
-        android:background="#2a2a2a"
-        android:layout_alignParentLeft="true">
-        
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            
-            <TableRow>
-                
-                <ImageButton
-		            android:id="@+id/contact_grid_option_properties1"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/info_ic"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
-                
-                <ImageButton
-		            android:id="@+id/contact_grid_option_share1"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null"
-		            android:layout_gravity="center_vertical" />
-	        
-		        <ImageButton
-		            android:id="@+id/contact_grid_option_remove1"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_delete"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical" />
-	        </TableRow>        
-        </TableLayout>
-    </RelativeLayout>           
-                 
-    <RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/contact_grid_item_layout2"
-        android:layout_toRightOf="@id/contact_grid_item_layout2"
-        android:background="@drawable/background_item_grid"
-        android:layout_alignParentRight="true">
-        
-        <RelativeLayout
-			android:id="@+id/contact_grid_relative_layout_avatar2"
-			android:layout_width="157dp"
-		    android:layout_height="157dp"
-		    android:layout_centerHorizontal="true"
-		    android:paddingTop="5dp"
-		    android:paddingBottom="5dp"
-		    android:layout_marginLeft="5dp"
-		    android:layout_marginTop="5dp"
-		    android:layout_marginRight="5dp"
-			>
-		
-		    <mega.privacy.android.app.components.RoundedImageView 
-			    android:id="@+id/contact_grid_thumbnail2"
-			    android:layout_width="157dp"
-			    android:layout_height="157dp"
-			    android:scaleType="fitCenter"
-		        rounded:corner_radius="27dp" 
-		        rounded:border_width="0dp"
-		        rounded:border_color="@color/border_file_properties"/>
-		    
-		    <TextView
-		        android:id="@+id/contact_grid_initial_letter2"
-		        android:layout_width="157dp"
-		        android:layout_height="140dp" 
-		        android:layout_centerInParent="true"
-			    android:gravity="center_horizontal|center_vertical" />
-	    
-	    </RelativeLayout>
 
-        <View
-	        android:id="@+id/contact_grid_separator2"
-	 		android:layout_width="wrap_content"
-	 		android:layout_height="2dp"
-	 		android:background="@color/grid_item_separator"
-	        android:scaleType="fitCenter"
-	        android:layout_marginLeft="6dp"
-	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/contact_grid_relative_layout_avatar2"/>
-        
-        <TextView
-	        android:id="@+id/contact_grid_filename2"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"	
-	        android:paddingLeft="6dp"
-	        android:paddingTop="3dp"
-	        android:layout_below="@id/contact_grid_separator2" />
-        
-        <TextView
-	        android:id="@+id/contact_grid_filesize2"
-	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
-	        android:paddingLeft="6dp"
-	        android:paddingBottom="7dp"
-	        android:textColor="@color/contact_list_second_row"
-	        android:layout_below="@id/contact_grid_filename2" />
-        
-        <ImageButton 
-	        android:id="@+id/contact_grid_three_dots2"
+        <ImageButton
+	        android:id="@+id/contact_grid_three_dots"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/action_selector_ic"
-			android:background="@null" 
-			android:paddingTop="6dp"
+	        android:src="@drawable/ic_dots_vertical_grey"
+	        android:layout_below="@id/contact_grid_relative_layout_avatar"
+			android:background="@null"
 	        android:paddingLeft="2dp"
-	        android:paddingRight="10dp"
-	        android:paddingBottom="12dp"
-	        android:layout_gravity="right"
-	        android:layout_alignParentRight="true" 
-	        android:layout_alignParentBottom="true"/>
-        <!--
-        <ImageView
-	        android:id="@+id/contact_grid_arrow_selection2"
+	        android:paddingRight="8dp"
+	        android:paddingTop="18dp"
+	        android:layout_alignParentRight="true"/>
+        
+        <TextView
+	        android:id="@+id/contact_grid_name"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/contact_grid_three_dots2"
-			android:layout_alignParentBottom="true"
-			android:layout_alignParentRight="true"
-			android:paddingRight="14dp" />-->
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@id/contact_grid_relative_layout_avatar"
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginTop="10dp"
+	        android:layout_toLeftOf="@id/contact_grid_three_dots"
+			android:textColor="@color/name_my_account"
+	        android:ellipsize="end"
+			android:textSize="16sp"
+			android:maxLines="1" />
         
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/contact_grid_options2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/contact_grid_item_layout2"
-        android:background="#2a2a2a">
-        
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            
-            <TableRow>
-	            <ImageButton
-		            android:id="@+id/contact_grid_option_properties2"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_properties"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
-                
-                <ImageButton
-		            android:id="@+id/contact_grid_option_share2"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null"
-		            android:layout_gravity="center_vertical" />
-	        
-		        <ImageButton
-		            android:id="@+id/contact_grid_option_remove2"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_delete"
-		            android:paddingLeft="30dp"
-		            android:paddingTop="10dp"
-		            android:background="@null" 
-		            android:layout_gravity="center_vertical" />
-	        </TableRow>        
-        </TableLayout>
-    </RelativeLayout>
-        
+        <TextView
+	        android:id="@+id/contact_grid_content"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+			android:layout_alignParentLeft="true"
+	        android:layout_marginBottom="12dp"
+	        android:layout_marginLeft="12dp"
+	        android:textColor="@color/mail_my_account"
+	        android:layout_below="@id/contact_grid_name"
+	        android:textSize="12sp" />  
+    </RelativeLayout>       
 </RelativeLayout>
