--- a/app/src/main/res/layout/item_contact_outg_request_list.xml
+++ b/app/src/main/res/layout/item_contact_outg_request_list.xml
@@ -1,154 +1,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/contact_request_list_item_layout"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
-    android:id="@+id/contact_request_list_item_layout" >
-    
-    <CheckBox
-        android:id="@+id/contact_request_list_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:checked="false"
-        android:focusable="false"
-        android:layout_centerVertical="true"
-        android:button="@drawable/btn_check_holo_light" />
+    android:layout_height="72dp"
+    android:descendantFocusability="blocksDescendants" >
 
     <RelativeLayout
-		android:id="@+id/contact_request_list_relative_layout_avatar"
-		android:layout_width="54dp"
-		android:layout_height="54dp"
-		android:layout_marginLeft="5dp" 
-		android:paddingTop="3dp"
-		android:layout_toRightOf="@id/contact_request_list_checkbox" >
-         
-	    <mega.privacy.android.app.components.RoundedImageView 
-	         android:id="@+id/contact_request_list_thumbnail"
-	         android:layout_width="54dp"
-	         android:layout_height="54dp" 
-	         android:scaleType="fitCenter"         
-	         rounded:corner_radius="27dp" 
-	         rounded:border_width="0dp"
-	         rounded:border_color="@color/border_file_properties"/>
-	    
-	    <TextView
-	        android:id="@+id/contact_request_list_initial_letter"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:layout_centerInParent="true"
-		    android:gravity="center_horizontal|center_vertical" />
-	    
+        android:id="@+id/contact_request_list_relative_layout_avatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="18dp"
+        android:layout_centerVertical="true">
+
+        <mega.privacy.android.app.components.RoundedImageView
+            android:id="@+id/contact_request_list_thumbnail"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerInParent="true"
+            android:scaleType="fitCenter"
+            rounded:border_color="@color/border_file_properties"
+            rounded:border_width="0dp"
+            rounded:corner_radius="20dp" />
+
+        <TextView
+            android:id="@+id/contact_request_list_initial_letter"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal|center_vertical"
+            android:paddingBottom="3dp" />
     </RelativeLayout>
-        
+
     <TextView
         android:id="@+id/contact_request_list_name"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/contact_request_list_relative_layout_avatar"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
-        android:textColor="@color/file_list_first_row"  />  
-    
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1"
+        android:textColor="@color/file_list_first_row" />
+
     <TextView
         android:id="@+id/contact_request_list_content"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_toRightOf="@id/contact_request_list_relative_layout_avatar"
+        android:layout_height="wrap_content"
         android:layout_below="@id/contact_request_list_name"
-        android:paddingLeft="5dp"
-        android:paddingBottom="7dp"
+        android:layout_toRightOf="@id/contact_request_list_relative_layout_avatar"
+        android:layout_marginLeft="13dp"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/file_list_second_row" />
-    
-    <ImageButton 
+   
+    <ImageButton
         android:id="@+id/contact_request_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
-		android:background="@null" 
-        android:layout_alignTop="@id/contact_request_list_name"
         android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="15dp" />
-     <!--
-    <ImageView
-        android:id="@+id/contact_list_arrow_selection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/arrow_selection"
-		android:layout_alignBottom="@id/contact_list_thumbnail"
-        android:layout_alignParentRight="true"
-        android:paddingRight="15dp" />-->
-    
-    <LinearLayout
-        android:id="@+id/contact_request_list_options"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/contact_request_list_content"
-        android:orientation="horizontal"
-        android:padding="0dp"
-        android:background="@color/adapters_background">
-               
-        <RelativeLayout
-                android:id="@+id/contact_list_option_reinvite_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-                
-	            <ImageView
-		            android:id="@+id/contact_list_option_reinvite"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/reinvite_ic"
-		           style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-	            
-	            <TextView 
-                    android:id="@+id/contact_list_option_reinvite_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:paddingBottom="10dp"
-                    android:text="@string/contact_reinvite"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-	        </RelativeLayout>    
-       
-	         
-         <RelativeLayout
-                android:id="@+id/contact_list_option_delete_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" >
-	           
-             <ImageView
-		            android:id="@+id/contact_list_option_delete"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_delete"
-		            style="@style/dialogActionButton"
-		            android:layout_centerHorizontal="true"
-		            android:layout_alignParentTop="true"
-		            android:paddingTop="2dp"/>
-	            
-	        <TextView 
-                    android:id="@+id/contact_list_option_delete_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/context_delete"
-                    android:layout_centerHorizontal="true"
-                     android:paddingBottom="10dp"
-					android:layout_alignParentBottom="true"
-					android:textColor="#ffffff"
-					android:textSize="10sp"
-					android:textStyle="bold"/>
-		     </RelativeLayout>    
+        android:background="@null"
+        android:paddingLeft="10dp"
+		android:layout_centerVertical="true"
+        android:src="@drawable/ic_dots_vertical_grey" />
 
-    </LinearLayout>
-    
 </RelativeLayout>
-
