Task #5383 - (Material Design Compatibility Pre-Lollipop) Shared Item section

--- a/app/src/main/res/layout/fragment_sharedwithmelist.xml
+++ b/app/src/main/res/layout/fragment_sharedwithmelist.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".IncomingSharesFragment" >
+    tools:context=".IncomingSharesFragmentLollipop" >
 
     <ListView
         android:id="@+id/sharedwithme_list_view"
