--- a/app/src/main/res/layout/fragment_sharedwithmegrid.xml
+++ b/app/src/main/res/layout/fragment_sharedwithmegrid.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IncomingSharesFragment"
+    tools:context=".IncomingSharesFragmentLollipop"
     android:background="@color/white" >
 
     <ListView 
