Task #5391 - (Material Design Compatibility Pre-Lollipop) Settings section and Pin Lock screen

--- a/app/src/main/res/layout/activity_file_properties.xml
+++ b/app/src/main/res/layout/activity_file_properties.xml
@@ -94,7 +94,7 @@
                             android:text="@string/file_properties_available_offline"
                             android:textStyle="bold" />
 
-                        <Switch
+                        <android.support.v7.widget.SwitchCompat
                             android:id="@+id/file_properties_switch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
