--- a/app/src/main/res/layout/activity_pin_lock.xml
+++ b/app/src/main/res/layout/activity_pin_lock.xml
@@ -1,59 +1,267 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container_pin_lock"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_secondary"
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
+    android:gravity="center_horizontal"
+    android:stackFromBottom="true"
+    android:windowSoftInputMode="stateVisible"
     tools:context=".PinLockActivityLollipop" >
 
+    <android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/myCoordinatorLayout"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true">
+	</android.support.design.widget.CoordinatorLayout>
+    
+    <TextView
+        android:id="@+id/unlock_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/lollipop_primary_color" />
+
     <LinearLayout
+        android:id="@+id/four_pin_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_below="@id/unlock_text_view"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:paddingBottom="40dp"
-            android:paddingTop="40dp" >
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/pass_first"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
 
-            <EditText
-                android:id="@+id/pin_lock_pin_code"
-                style="@style/InputField"
-                android:hint="@string/settings_pin_lock_code"
-                android:imeOptions="actionDone"
-                android:textColor="@color/black"
-                android:inputType="numberPassword" >
-            </EditText>
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/pass_second"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
 
-            <Button
-                style="@style/button_MEGA"
-                android:id="@+id/pin_lock_enter_pin"
-                android:layout_gravity="center"
-                android:text="@string/pin_lock_enter" >
-            </Button>
-			
-        </LinearLayout>
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/pass_third"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/pass_fourth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionDone"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+    </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/six_pin_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/unlock_text_view"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" 
+        android:visibility="gone">
+
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/six_pass_first"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/six_pass_second"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/six_pass_third"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
         
-        <include layout="@layout/delimiter" />
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/six_pass_fourth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="30dp"
-            android:gravity="center_horizontal"
-            >
-            
-            <Button
-                android:id="@+id/pin_lock_logout"
-                style="@style/button_MEGA"
-                android:layout_gravity="center"
-                android:text="@string/action_logout" >
-            </Button>
-            
-        </LinearLayout>
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/six_pass_fifth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <mega.privacy.android.app.components.EditTextPIN
+            android:id="@+id/six_pass_sixth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionDone"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+    </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/alphanumeric_pin_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/unlock_text_view"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" 
+        android:visibility="gone">
+        
+        <EditText
+            android:id="@+id/alphanumeric_text"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword" />
+        
     </LinearLayout>
 
-</ScrollView>
+    <LinearLayout
+        android:id="@+id/warning_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/four_pin_layout"
+        android:background="@color/white"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/warning_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:src="@drawable/ic_warning_black" />
+
+        <TextView
+            android:id="@+id/warning_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/pin_lock_alert"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/switch_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/alphanumeric_pin_layout"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/pin_three_dots"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_three_dots" />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switch_pin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/pin_ABC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/abc"
+            android:textColor="@color/textGrey"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <RelativeLayout
+	    android:id="@+id/buttons_layout"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_centerHorizontal="true"
+	    android:layout_below="@id/warning_layout"
+	    android:background="@color/white">
+        
+	    <TextView
+	        android:id="@+id/button_logout"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="left"
+	        android:layout_alignParentLeft="true"
+	        android:gravity="left"
+	        android:fontFamily="sans-serif-medium"
+	        android:textColor="@color/accentColor"
+	        android:textSize="14sp" />
+	    
+	     <TextView
+	        android:id="@+id/button_enter"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_gravity="right"
+	        android:gravity="right"
+	        android:fontFamily="sans-serif-medium"
+	        android:textColor="@color/accentColor"
+	        android:textSize="14sp"
+	        android:visibility="gone" />
+     
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/red_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/mega_transparency"
+        android:gravity="center_horizontal|center_vertical" >
+
+        <TextView
+            android:id="@+id/alert_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center_horizontal|center_vertical"
+            android:textColor="@color/white" />
+    </RelativeLayout>
+
+</RelativeLayout>
