--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -62,7 +62,7 @@
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_three_dots" />
 
-                <Switch
+                <android.support.v7.widget.SwitchCompat
                     android:id="@+id/switch_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
