--- a/app/src/main/res/layout/cell_photosync_grid_fill.xml
+++ b/app/src/main/res/layout/cell_photosync_grid_fill.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cell_photosync_grid_item_complete_layout"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="7dp"
     android:background="@color/white">
@@ -12,7 +12,49 @@
      android:scaleType="fitCenter"
      android:layout_margin="3dp"
      android:background="@color/white"
-     android:layout_centerHorizontal="true"/>	
+     android:layout_centerHorizontal="true"/>
+
+    <LinearLayout
+        android:id="@+id/cell_photosync_gradient_effect"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@drawable/gradient_cam_uploads"
+        android:layout_margin="1dp"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <RelativeLayout android:id="@+id/cell_photosync_grid_video_info_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="3dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/cell_photosync_grid_video_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="9dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            android:textSize="14sp"/>
+
+        <ImageView
+            android:id="@+id/cell_photosync_grid_video_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_play_arrow_white_24dp"
+            android:visibility="gone"
+            android:background="@null" />
+
+     </RelativeLayout>
+
+
      
     <LinearLayout
         android:id="@+id/cell_photosync_menu_long_click_unselected"
@@ -46,7 +88,7 @@
 	
     <RelativeLayout
     	android:id="@+id/cell_photosync_item_layout_empty"
-    	android:layout_width="fill_parent"
+    	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:background="@color/white">
 	</RelativeLayout>
