--- a/app/src/main/res/layout/sortby_dialog.xml
+++ b/app/src/main/res/layout/sortby_dialog.xml
@@ -14,181 +14,98 @@
 	        android:id="@+id/sortby_dialog_name_text"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:textSize="18sp"
-	        android:textStyle="bold"
-	        android:paddingLeft="15dp"
-	        android:paddingTop="10dp"
-	        android:paddingBottom="10dp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator1"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+	        android:textStyle="bold"/>
 	    
 	    <CheckedTextView
 		    android:id="@+id/sortby_dialog_ascending_check"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:checkMark="@drawable/btn_radio_holo_light"
+		    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
 		    android:ellipsize="marquee"
 		    android:gravity="center_vertical"
-		    android:paddingEnd="16dip"
-		    android:paddingStart="16dip"
-		    android:textAppearance="?android:attr/textAppearanceMedium"
-		    android:paddingTop="10dp"
-		    android:paddingBottom="10dp"
-		    android:paddingRight="15dp"
-		    android:paddingLeft="25dp"
-		    android:textSize="18sp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator2"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+		    android:textAppearance="?android:attr/textAppearanceMedium"/>	    
 	    
 	    <CheckedTextView
 		    android:id="@+id/sortby_dialog_descending_check"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:checkMark="@drawable/btn_radio_holo_light"
+		    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
 		    android:ellipsize="marquee"
 		    android:gravity="center_vertical"
-		    android:paddingEnd="16dip"
-		    android:paddingStart="16dip"
-		    android:textAppearance="?android:attr/textAppearanceMedium"
-		    android:paddingTop="10dp"
-		    android:paddingBottom="10dp"
-		    android:paddingRight="15dp"
-		    android:paddingLeft="25dp"
-		    android:textSize="18sp"/>
+		    android:textAppearance="?android:attr/textAppearanceMedium"/>
 	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator3"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
 	    
 	    <TextView 
 	        android:id="@+id/sortby_dialog_date_text"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:textSize="18sp"
-	        android:textStyle="bold"
-	        android:paddingLeft="15dp"
-	        android:paddingTop="10dp"
-	        android:paddingBottom="10dp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator4"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+	        android:textStyle="bold"/>	    
 	    
 	    <CheckedTextView
 		    android:id="@+id/sortby_dialog_newest_check"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:checkMark="@drawable/btn_radio_holo_light"
+		    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
 		    android:ellipsize="marquee"
 		    android:gravity="center_vertical"
-		    android:paddingEnd="16dip"
-		    android:paddingStart="16dip"
-		    android:textAppearance="?android:attr/textAppearanceMedium"
-		    android:paddingTop="10dp"
-		    android:paddingBottom="10dp"
-		    android:paddingRight="15dp"
-		    android:paddingLeft="25dp"
-		    android:textSize="18sp"/>
-
-	    <View
-	        android:id="@+id/sortby_dialog_separator5"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+		    android:textAppearance="?android:attr/textAppearanceMedium"/>
 	    
 	    <CheckedTextView
 		    android:id="@+id/sortby_dialog_oldest_check"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:checkMark="@drawable/btn_radio_holo_light"
+		    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
 		    android:ellipsize="marquee"
 		    android:gravity="center_vertical"
-		    android:paddingEnd="16dip"
-		    android:paddingStart="16dip"
-		    android:textAppearance="?android:attr/textAppearanceMedium"
-		    android:paddingTop="10dp"
-		    android:paddingBottom="10dp"
-		    android:paddingRight="15dp"
-		    android:paddingLeft="25dp"
-		    android:textSize="18sp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator6"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
-		
+		    android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+		<TextView
+			android:id="@+id/sortby_dialog_date_modification_text"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:textStyle="bold"/>
+
+		<CheckedTextView
+			android:id="@+id/sortby_dialog_newest_modification_check"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
+			android:ellipsize="marquee"
+			android:gravity="center_vertical"
+			android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+		<CheckedTextView
+			android:id="@+id/sortby_dialog_oldest_modification_check"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
+			android:ellipsize="marquee"
+			android:gravity="center_vertical"
+			android:textAppearance="?android:attr/textAppearanceMedium"/>
+
 		<TextView 
 	        android:id="@+id/sortby_dialog_size_text"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:textSize="18sp"
-	        android:textStyle="bold"
-	        android:paddingLeft="15dp"
-	        android:paddingTop="10dp"
-	        android:paddingBottom="10dp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator7"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+	        android:textStyle="bold"/>
 	    
 	    <CheckedTextView
 		    android:id="@+id/sortby_dialog_largest_first_check"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:checkMark="@drawable/btn_radio_holo_light"
+		    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
 		    android:ellipsize="marquee"
 		    android:gravity="center_vertical"
-		    android:paddingEnd="16dip"
-		    android:paddingStart="16dip"
-		    android:textAppearance="?android:attr/textAppearanceMedium"
-		    android:paddingTop="10dp"
-		    android:paddingBottom="10dp"
-		    android:paddingRight="15dp"
-		    android:paddingLeft="25dp"
-		    android:textSize="18sp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator8"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+		    android:textAppearance="?android:attr/textAppearanceMedium"/>
 	    
 	    <CheckedTextView
 		    android:id="@+id/sortby_dialog_smallest_first_check"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:checkMark="@drawable/btn_radio_holo_light"
+		    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
 		    android:ellipsize="marquee"
 		    android:gravity="center_vertical"
-		    android:paddingEnd="16dip"
-		    android:paddingStart="16dip"
-		    android:textAppearance="?android:attr/textAppearanceMedium"
-		    android:paddingTop="10dp"
-		    android:paddingBottom="10dp"
-		    android:paddingRight="15dp"
-		    android:paddingLeft="25dp"
-		    android:textSize="18sp"/>
-	    
-	    <View
-	        android:id="@+id/sortby_dialog_separator9"
-	        android:layout_width="match_parent"
-	        android:layout_height="1dp"
-	        android:background="#e5e5e5" />
+		    android:textAppearance="?android:attr/textAppearanceMedium"/>
 	    -->
 	</LinearLayout>
 </ScrollView>
